(#10) Add `Avatar: The Last Airbender`; fix gaps closing popups.

--- a/sass/flex/flex.scss
+++ b/sass/flex/flex.scss
@@ -34,8 +34,8 @@
         margin: 0;
         padding-inline-start: 0;
         > li > .info {
-          border-bottom: 1px dotted #000;
           cursor: help;
+          display: inline-table;
           &:hover .popup {
             display: block;
             margin-right: 20px;
@@ -52,6 +52,9 @@
               margin: 15px 12px 15px 5px;
               padding-inline-start: 25px;
             }
+          }
+          > span {
+            border-bottom: 1px dotted #000;
           }
         }
       }
